@@ -1,6 +1,7 @@
 2007-07-06  Michael Stucki  <michael@typo3.org>
 
 	* Fixed bug #3544: RTE-config in PageTS-config not loaded when in draft-workspace
+	* Fixed bug #4917: Wrong links inside mounted page with overlay (thanks to Melanie Meyer / Franz Ripfel)
 
 2007-07-02  Oliver Hader  <oh@inpublica.de>
 
